--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/ayushg03/Backend/issues"
   },
-  "homepage": "https://github.com/ayushg03/Backend#readme"
+  "homepage": "https://github.com/ayushg03/Backend#readme",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "mongoose": "^6.8.4",
+    "path": "^0.12.7"
+  }
 }
